--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   cloud_firestore: ^3.1.6
+  latlong2: ^0.8.1
+  geolocator: ^8.0.3
 
 dev_dependencies:
   flutter_test:
