--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^3.1.6
   latlong2: ^0.8.1
   geolocator: ^8.0.3
+  google_sign_in: ^5.2.3
 
 dev_dependencies:
   flutter_test:
